--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -41,14 +41,21 @@ p{
     font-weight: 500;
 }
 
-::placeholder{
-    color: var(--cinza);
-}
-
 .navItem{
-    height: 58px;
+    display: flex;
+    align-items: center;
+    height: 57px;
     width: 100%;
     background-color: var(--branco);
+    border: 1px solid var(--branco);
+}
+
+.navItem:hover{
+    border: 1px solid var(--cinza);
+}
+
+.navItem p{
+    margin-left: 5%;
 }
 
 .nav__all{
@@ -61,17 +68,28 @@ p{
 
 .nav__input{
     align-self: center;
-    width: 90%;
+    width: 288px;
     height: 38px;
+    margin: 28px 0;
 }
 
 input{
     width: 100%;
     height: 100%;
+    border: none;
+    background-color: var(--cinza-input);
+    border-radius: 8px;
+}
+
+::placeholder{
+    color: var(--cinza);
+    padding-left: 41px;
 }
 
 .nav__input span{
     position: absolute;
+    align-self: center;
+    margin: 10px 0 0 11px;
 }
 
 .nav__user{
@@ -80,4 +98,9 @@ input{
     gap: 12px;
     height: 38px;
     width: 100%;
+    margin-left: 5%;
+}
+
+.hidden {
+    display: none;
 }
